tests/errors/file_01.f90
program file_01
    open(10, delim="xyz")
end program
